--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^5.x",
     "@react-navigation/stack": "^5.x",
+    "email-validator": "^2.0.4",
     "expo": "~44.0.0",
     "expo-google-app-auth": "~8.3.0",
     "expo-status-bar": "~1.2.0",
